[tool.poetry]
name = "insta-downloader-backend"
version = "0.1.0"
description = "Instagram Downloader Backend"
authors = ["Prince Shekhawat <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1"
instaloader = "^4.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
